Implement POST /auth/session with hardcoded id/password
id: me@example.com
password: pa$$w0rd
