# internal/app/api/auth/defs.go
@@ -1,0 +1,6 @@
+package auth
+
+type SessionCreateInput struct {
+	ID       string `json:"id"`
+	Password string `json:"password"`
+}
